# hse-system-design

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dwh.yaml  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml
autoclients/config_stub_client/: __init__.py
autoclients/config_stub_client/models/: __init__.py  config.py
autoclients/geography_stub_client/: __init__.py
autoclients/performer_stub_client/: __init__.py
cli/: __main__.py
grafana/: config.yaml
kubernetes/: configmap.yaml  ingress.yaml
kubernetes/crontab/: crontab.yaml
kubernetes/database/: database.yml  migrations.yml
kubernetes/http-api/: http-api.yaml
kubernetes/kafka/: kafka-create-topics.yaml  kafka-ui.yaml  kafka.yaml  zookeeper.yaml
kubernetes/stream/: stream.yaml
kubernetes/stubs/: config-stub-http-api.yaml  geography-stub-http-api.yaml  performer-stub-http-api.yaml
migrations/: env.py
postgres/source/: pg_hba.conf
prober/: Dockerfile  prober.py  prometheus.yml
src/: container.py
src/domain/: exceptions.py
stubs/config/: pyproject.toml
stubs/geography/: pyproject.toml
stubs/performer/: Dockerfile  pyproject.toml
stubs/performer/src/: container.py
stubs/performer/src/domain/services/: exceptions.py
stubs/performer/src/domain/services/interfaces/: performer.py
stubs/performer/src/infrastructure/adapters/: performer.py
stubs/performer/src/infrastructure/settings/: app.py
stubs/performer/src/presentation/http/: handlers.py
stubs/performer/src/presentation/http/api/v1/: factory.py
stubs/performer/src/presentation/http/api/v1/routers/: performers.py
utils/: alembic.py  assertions.py  asyncio.py  basedir.py  datetime.py  itertools.py  kafka.py  logging.py  pyproject.py  typing.py
(+179 files in other folders)
