[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "performer-stub"
version = "1.0.0"
description = "..."
license = "MIT"
authors = [
    "Antonina Klimchuk",
    "Liliyana Liakh",
    "Sergei Bogdanov",
    "Stepan Balaian",
    "Viktoriia Kovalevskaia",
]
maintainers = [
    "Antonina Klimchuk",
    "Liliyana Liakh",
    "Sergei Bogdanov",
    "Stepan Balaian",
    "Viktoriia Kovalevskaia",
]
readme = "README.md"
homepage = "https://github.com/syubogdanov/hse-system-design"
repository = "https://github.com/syubogdanov/hse-system-design"
documentation = "https://github.com/syubogdanov/hse-system-design/tree/main/docs/"

[tool.poetry.dependencies]
dependency-injector = "^4.43"
fastapi = "^0.115"
pydantic = "^2.9"
pydantic-settings = "^2.6"
python = "^3.11"
uvicorn = "^0.32"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
mypy = "^1.13"
ruff = "^0.7"

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
explicit_package_bases = true
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
exclude = ["autoclients/.*", "stubs/.*"]
python_version = "3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D104"]
exclude = ["autoclients/**", "stubs/**"]

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-args = 8
